--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alex's Portfolio</title>
+    <link rel = "stylesheet" href="style.css">
 </head>
-<body>
+
+<div class="header">
     <header>
-       <ul>
-       <a href=aboutMe.html>About Me</a>
-       <a></a>
-       </ul>
+        <div id="title">AT</div>
+        <!--
+        put link to linkdin and resume
+        -->
+        <nav>
+            <a href="aboutMe.html" id="aboutMe">About Me</a>
+            <a href="projects.html" id="projects">My Projects</a>
+        </nav>
     </header>
+</div>
+
+<body>
+    <p class="bio">
+       <span id = "intro"> Hello I am Alex Thurgood<br> </span>
+        I am currently a senior at University of Utah studying Software Development,<br> and I am an aspiring full stack developer. 
+    </p>
 </body>
 </html>
