--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,17 @@
 
 <div class="header">
     <header>
-        <div id="title">AT</div>
-        <!--
-        put link to linkdin and resume
-        -->
+        <div class="contact">
+            <p class="initials">AT</p>
+            <!-- <p>adthurgood@gmail.com</p> -->
+
+            <a href="https://www.linkedin.com/in/alex-thurgood-629b11224/" id="linkedin"><img src="../images/Linkedin Icon.png" alt="LinkedIn Icon">
+            </a>
+           
+            <a href="https://github.com/ThurgoodAlex" id="github"><img src="../images/GitHub-logo.png" alt="Github Icon">
+            </a>
+
+        </div>
         <nav>
             <a href="aboutMe.html" id="aboutMe">About Me</a>
             <a href="projects.html" id="projects">My Projects</a>
