working on cleaning up header bar and css

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
 <body>
     <p class="bio">
        <span id = "intro"> Hello I am Alex Thurgood<br> </span>
-        I am currently a senior at University of Utah studying Software Development,<br> and I am an aspiring full stack developer. 
+       I am a senior at the University of Utah studying Software Development,<br> and an aspiring full stack developer and software engineer. 
     </p>
 </body>
 </html>
