--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
 
         </div>
         <nav>
-            <a href="aboutMe.html" id="aboutMe">About Me</a>
+            <!-- <a href="aboutMe.html" id="aboutMe">About Me</a> -->
             <a href="projects.html" id="projects">My Projects</a>
         </nav>
     </header>
@@ -29,8 +29,10 @@
 
 <body>
     <p class="bio">
-       <span id = "intro"> Hello I am Alex Thurgood<br> </span>
-       I am a senior at the University of Utah studying Software Development,<br> and an aspiring full stack developer and software engineer. 
+       <span id = "name">Alex Thurgood<br> </span>
+            <span id = "bio">
+       Hello, I am currently a student at the University of Utah studying Software Development,<br> and an aspiring full stack developer and software engineer.
+            </span>
     </p>
 </body>
 </html>
