added typewriter effect

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alex's Portfolio</title>
     <link rel = "stylesheet" href="style.css">
+    <script src = "animations.js"></script>
 </head>
 
 <div class="header">
@@ -29,7 +30,8 @@
 
 <body>
     <p class="bio">
-       <span id = "name">Alex Thurgood<br> </span>
+       <span id = "name">Alex Thurgood </span>
+       <br>
             <span id = "bio">
        Hello, I am currently a student at the University of Utah studying Software Development,<br> and an aspiring full stack developer and software engineer.
             </span>
