messing around with my body paragraphs and the styling

--- a/src/index.html
+++ b/src/index.html
@@ -22,19 +22,22 @@
 
         </div>
         <nav>
-            <!-- <a href="aboutMe.html" id="aboutMe">About Me</a> -->
+
             <a href="projects.html" id="projects">My Projects</a>
         </nav>
     </header>
 </div>
 
 <body>
-    <p class="bio">
-       <span id = "name">Alex Thurgood </span>
-       <br>
-            <span id = "bio">
-       Hello, I am currently a student at the University of Utah studying Software Development,<br> and an aspiring full stack developer and software engineer.
+    <div class="bio-container">
+        <div class="name-container">
+            <span id="name">Alex Thurgood</span>
+        </div>
+        <div class="bio-text-container">
+            <span id="bio">
+                Hello, I am currently a student at the University of Utah studying Software Development,<br> and an aspiring full stack developer and software engineer.
             </span>
-    </p>
+        </div>
+    </div>
 </body>
 </html>
