fixed the typing effect

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,10 @@
 <body>
     <div class="bio-container">
         <div class="name-container">
-            <span id="name">Alex Thurgood</span>
+            <!-- try and split up name and call the js function on both to get rid of that wierd space issue -->
+            <span id = "first">Alex</span>
+            <br>
+            <span id = "last"> Thurgood</span>
         </div>
         <div class="bio-text-container">
             <span id="bio">
