finished basic structure of protfolio, need to host now

--- a/src/index.html
+++ b/src/index.html
@@ -5,30 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alex's Portfolio</title>
     <link rel = "stylesheet" href="style.css">
-    <script src = "animations.js"></script>
+    <script src = "script.js"></script>
 </head>
 
-<div class="header">
-    <header>
-        <div class="contact">
-            <p class="initials">AT</p>
-            <!-- <p>adthurgood@gmail.com</p> -->
+<div id="header-placeholder"></div>
 
-            <a href="https://www.linkedin.com/in/alex-thurgood-629b11224/" id="linkedin"><img src="../images/Linkedin Icon.png" alt="LinkedIn Icon">
-            </a>
-           
-            <a href="https://github.com/ThurgoodAlex" id="github"><img src="../images/GitHub-logo.png" alt="Github Icon">
-            </a>
-
-        </div>
-        <nav>
-
-            <a href="projects.html" id="projects">My Projects</a>
-        </nav>
-    </header>
-</div>
-
-<body>
+<body id="index-body">
     <div class="bio-container">
         <div class="name-container">
             <span id = "first">Alex</span>
